// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"Incorrect

enum Fruit {
  Apple,
}

declare let fruit: Fruit;

fruit === 0;
~~~~~~~~~~~ The two values in this comparison do not have a shared enum type.
"
`;

exports[` 2`] = `
"Incorrect

enum Vegetable {
  Asparagus = 'asparagus',
}

declare let vegetable: Vegetable;

vegetable === 'asparagus';
~~~~~~~~~~~~~~~~~~~~~~~~~ The two values in this comparison do not have a shared enum type.
"
`;

exports[` 3`] = `
"Correct

enum Fruit {
  Apple,
}

declare let fruit: Fruit;

fruit === Fruit.Apple;
"
`;

exports[` 4`] = `
"Correct

enum Vegetable {
  Asparagus = 'asparagus',
}

declare let vegetable: Vegetable;

vegetable === Vegetable.Asparagus;
"
`;
